--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<header>
 							<span class="avatar"><img src="https://avatars1.githubusercontent.com/u/6290713?v=3&s=150" alt="" /></span>
 							<h1>SyneArt</h1>
-							<p>Senior Android Engineer</p>
+							<p>Indie Developer</p>
 						</header>
 						<!--
 						<hr />
